[gd_scene load_steps=4 format=2]

[ext_resource path="res://PlayerShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 96, 72, 0, 0, 0, 0, 376, 56, 0, 0, 0, 0, 592, 72, 0, 0, 0, 0, 920, 176, 0, 0, 0, 0, 896, 320, 0, 0, 0, 0, 488, 376, 0, 0, 0, 0, 592, 288, 0, 0, 0, 0, 800, 256, 0, 0, 0, 0, 736, 200, 0, 0, 0, 0, 528, 184, 0, 0, 0, 0, 416, 136, 0, 0, 0, 0, 408, 272, 0, 0, 0, 0, 424, 344, 0, 0, 0, 0, 248, 272, 0, 0, 0, 0, 232, 144, 0, 0, 0, 0, 152, 104, 0, 0, 0, 0, 96, 72 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="PlayerShip" parent="." instance=ExtResource( 1 )]
position = Vector2( 488, 544 )

[node name="EnemySpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="InitialLocation" type="Position2D" parent="."]
position = Vector2( 488, 544 )

[node name="AsteroidsPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="AndroidsSpawnLocation" type="PathFollow2D" parent="AsteroidsPath"]
position = Vector2( 96, 72 )
rotation = -0.0570818
[connection signal="hit" from="PlayerShip" to="." method="_on_PlayerShip_hit"]
[connection signal="hit_asteroid" from="PlayerShip" to="." method="_on_hit_asteroid"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
